<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Upper"
    tools:context=".MActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/m1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m5"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m6"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m6"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/m7"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/m7"
            />
    </LinearLayout>
</ScrollView>